# so_long

./: CMakeLists.txt  Makefile  map.ber  so_long
imgs/: alek.xpm  djenia.xpm  dollars.xpm  exit.xpm  exit2.xpm  firewall.xpm  floor.xpm  fon.xpm  freedom.xpm  happy_alek.xpm  reverse_jenia.xpm  tea.xpm  voenkom.xpm  voenkom_reverse.xpm  wall.xpm  wall2.xpm  wallu.xpm
includes/: so_long.h
libs/libft/: Makefile
libs/libft/includes/: libft.h
libs/libft/srcs/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_free_split.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_putstrnewline.c  ft_split.c  ft_split_len.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+8 more)
libs/minilibx_macos/: mlx_window.swiftsourceinfo
maps/: badwall.ber  map.ber  map_0.ber  map_2.ber  map_4.ber  map_5.ber  mapc.ber  notrect.ber
minilibx_macos/: mlx_image.swiftsourceinfo  mlx_init.swiftsourceinfo
mlx/: mlx_image.swiftsourceinfo  mlx_init.swiftsourceinfo  mlx_window.swiftsourceinfo
srcs/: color.c  drawing.c  end_game.c  enemy_behavior.c  enemy_list.c  error.c  free.c  game_start.c  generate_cellmap.c  hooks.c  image.c  input.c  main.c  more_open_images.c  movement.c  open_images.c  update.c  validation.c  window.c
